--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Coming Soon!</h1>
+<h1>Contact efefaefawfefawf@gmail.com With A 5 Pound Amazon Gift Card Code Then Email The Thing Your Trying To Buy With The Code!</h1>
